[project]
name = "applover-t1"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Olgierd Kasprowicz", email = "olixem@gmail.com"},
]
dependencies = [
    "fastapi[standard]>=0.112.0",
    "sqlalchemy>=2.0.32",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
